[project]
name = "randlanet-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "laspy[lazrs]>=2.5.4",
    "numpy<2",
    "open3d>=0.18.0",
    "tensorboard>=2.18.0",
    "torch>=2.0.0,<2.1.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
